--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -7,11 +7,13 @@
           <form id="login" action="/usuario/perfil" method="POST">
               <article>
                   <label for="email">Correo electrónico :</label>
-                  <input type="text" name="email" id="email" value="<%= locals.email && email ? email : '' %>" required>
+                  <input type="text" name="email" id="email" value="<%= locals.email && email ? email : '' %>">
+                  <div class="error-email"></div>
               </article>
               <article>
                   <label for="password">Contraseña :</label>
-                  <input type="password" name="password" id="password" required>
+                  <input type="password" name="password" id="password">
+                  <div class="error-password"></div>
               </article>
               <% if(locals && locals.errors) { %>
               <% errors.forEach( error => { %>
@@ -30,4 +32,5 @@
     </div>
     <%- include('../partials/footer') %>
 </body>
+<script src="../../../js/validations/inicioUsuarioValidacion.js"></script>
 </html>
