--- a/src/src/views/users/register.ejs
+++ b/src/src/views/users/register.ejs
@@ -6,53 +6,62 @@
         <form id="register" action="/usuario/<%= newID %>" method="POST" enctype="multipart/form-data">
             <article>
                 <label for="firstName">Nombre(s) :</label>
-                <input type="text" name="firstName" id="firstName" value="<%= locals.writtenValues && writtenValues.firstName ? writtenValues.firstName : '' %>" required>
+                <input type="text" name="firstName" id="firstName" value="<%= locals.writtenValues && writtenValues.firstName ? writtenValues.firstName : '' %>" >
+                <div class="error-firstName"></div>
             </article>
             <article>
                 <label for="lastName">Apellidos :</label>
-                <input type="text" name="lastName" id="lastName" value="<%= locals.writtenValues && writtenValues.lastName ? writtenValues.lastName : '' %>" required>
+                <input type="text" name="lastName" id="lastName" value="<%= locals.writtenValues && writtenValues.lastName ? writtenValues.lastName : '' %>" >
+                <div class="error-lastName"></div>
             </article>
             <article>
                 <label for="email">Email :</label>
-                <input type="text" name="email" id="email" value="<%= locals.writtenValues && writtenValues.email ? writtenValues.email : '' %>" required>
+                <input type="text" name="email" id="email" value="<%= locals.writtenValues && writtenValues.email ? writtenValues.email : '' %>" >
+                <div class="error-email"></div>
             </article>
             <article>
                 <label for="password">Contraseña :</label><p id="password-rule">Ingresar como mínimo un caracter númerico, mayúsculo, minúsculo y otro especial.</p>
-                <input type="password" name="password" id="password" required>
+                <input type="password" name="password" id="password" >
+                <div class="error-password"></div>
             </article>
             <article>
                 <label for="rewrited-password">Vuelva a escribir la contraseña :</label>
-                <input type="password" name="rewrited-password" id="rewrited-password" required>
+                <input type="password" name="rewrited-password" id="rewrited-password" >
+                <div class="error-rwPassword"></div>
             </article>
             <article>
                 <label for="image" id="imageLabel">Imagen de perfil : </label>
+                <div class="error-imagen"></div>
                 <input type="file" name="image" id="image" accept=".jpg, .png">
             </article>
-
-
             <article>
                 <label for="birthday" id="birthday-label">Cumpleaños :</label>
-                <input type="date" name="birthday" id="birthday" value="<%= locals.writtenValues && writtenValues.birthday ? writtenValues.birthday : '' %>" required>
+                <input type="date" name="birthday" id="birthday" value="<%= locals.writtenValues && writtenValues.birthday ? writtenValues.birthday : '' %>" >
+                <div class="error-birthday"></div>
             </article>
             <article>
                 <label for="address" id="address-label">Dirección de residencia :</label>
-                <input type="text" name="address" id="address" value="<%= locals.writtenValues && writtenValues.address ? writtenValues.address : '' %>" required>
+                <input type="text" name="address" id="address" value="<%= locals.writtenValues && writtenValues.address ? writtenValues.address : '' %>" >
+                <div class="error-address"></div>
             </article>
             <article>
                 <label for="zip" id="zip-label">Código postal :</label>
-                <input type="number" name="zip" id="zip" value="<%= locals.writtenValues && writtenValues.zip ? writtenValues.zip : '' %>" required>
+                <input type="number" name="zip" id="zip" value="<%= locals.writtenValues && writtenValues.zip ? writtenValues.zip : '' %>" >
+                <div class="error-zip"></div>
             </article>
             <article>
                 <label for="city" id="city-label">Ciudad :</label>
-                <input type="text" name="city" id="city" value="<%= locals.writtenValues && writtenValues.city ? writtenValues.city : '' %>" required>
+                <input type="text" name="city" id="city" value="<%= locals.writtenValues && writtenValues.city ? writtenValues.city : '' %>" >
+                <div class="error-city"></div>
             </article>
             <article>
                 <label for="state" id="state-label">Estado :</label>
-                <input type="text" name="state" id="state" value="<%= locals.writtenValues && writtenValues.state ? writtenValues.state : '' %>" required>
+                <input type="text" name="state" id="state" value="<%= locals.writtenValues && writtenValues.state ? writtenValues.state : '' %>" >
+                <div class="error-state"></div>
             </article>
             <article>
                 <label for="country" id="country-label">País :</label>
-                <select name="country" id="country" required>
+                <select name="country" id="country" >
                     <% if(locals && locals.countries) { %>
                         <% countries.forEach( country => { %>
                     <option value="<%= country.name %>" <%= locals && locals.writtenValues && ( writtenValues.country == country.name ) ? 'selected' : '' %> ><%= country.name %></option>
@@ -75,4 +84,5 @@
     </section>
     <%- include('../partials/footer') %>
 </body>
+<script src="../../../js/validations/registroUsuarioValidacion.js"></script>
 </html>
