Modificaciones necesarias para que funcionen como deben las validaciones
Se modificaron todos los archivos de las validaciones hechas del lado
del Front-end, para poder visualizar con los estilos necesarios los
botones de envio cuando pueda o no enviarse un formulario, asi
como los errores abajo del campo en cuestión, se modificaron las vistas
de login, sigup de usuarios, asi como de createProduct y editProduct de
acuerdo al nuevo nombre de los archivos de validación, que van más
acorde a la estructura actual y que se ha seguido del proyecto.

Se intento hacer modificación de la petición por fetch de los paises del
combobox pero no se pudo, requiero específicar la api key para tener el
resultado que espero, sin embargo, eso falta por arreglar, ESO Y
VERIFICAR QUE LAS VALIDACIONES POR LADO DEL FRONT-END PARA EL REGISTRO
DE USUARIOS FUNCIONAN CORRECTAMENTE.

--- a/src/public/css/stylesEditProduct.css
+++ b/src/public/css/stylesEditProduct.css
@@ -242,6 +242,30 @@ div #pieces {
     width: 60px;
 }
 
+.error-artist {
+    margin: auto;
+    color: red;
+    text-align: center;
+}
+
+.error-album {
+    margin: auto;
+    color: red;
+    text-align: center;
+}
+
+.error-description {
+    margin: auto;
+    color: red;
+    text-align: center;
+}
+
+.error-image {
+    margin: auto;
+    color: red;
+    text-align: center;
+}
+
 /* #search { no existe
     margin: 0 auto;
     background-color: white;
