--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -4,7 +4,7 @@
     <!-- <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a>-->  
     <h1>Registro de Producto</h1>
     <section class="container">
-        <form action="/productos/<%= length + 1 %>" class="product-register" method="POST" enctype="multipart/form-data">
+        <form action="/productos/<%= length + 1 %>" class="product-register productValidation" method="POST" enctype="multipart/form-data">
             <div class="division">
                 <div class="info">
                     <label for="artists">Selecciona Artista:</label>
@@ -115,5 +115,6 @@
         </form>
     </section>
     <%- include('../partials/footer') %>
+    <script src="../../../js/validations/productValidation.js"></script>
 </body>
-<script src="../../../js/validations/crearProductoValidacion.js"></script>
+</html>
