--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -4,7 +4,7 @@
     <!-- <a class="central-logo" href="/"><img class="central-BMG" src="/images/logoBMG.png" alt="Logo del Sitio E-commerceBGG"></a>--> <!--<i class="fas fa-compact-disc"></i>-->  
     <h1>Modificar producto</h1>
     <section class="container">
-        <form action="/productos/<%= product.vinyl_id %>?_method=PUT" class="product-edit" method="POST" enctype="multipart/form-data">
+        <form action="/productos/<%= product.vinyl_id %>?_method=PUT" class="product-edit productValidation" method="POST" enctype="multipart/form-data">
             <div class="division">
                 <div class="info">                    
                     <label for="name"><%= locals && locals.product.artists[1] ? 'Nombre de los Artistas :' : 'Nombre del Artista :' %></label>
@@ -62,6 +62,7 @@
                     <label for="image">Imagen Actual: </label>
                     <img id="standardImage" src="/images/registeredProducts/<%= product.image %>" width="40%">
                     <input type="file" name="image" id="image">
+                    <div class="error-image"></div>
                 </div>
                 <div class="info three">
                     <label for="color" id="color-selector">Color predominante del album : </label>
@@ -87,7 +88,6 @@
             <div class="division" id="all-songs">
                 <div class="info">
                     <label>Canciones :</label>
-                    <div class="error-image"></div>
                     <div class="songs">
                         <label for="songs">Selecciona el titulo :</label>
                         <select name="songs" id="songs-album">
@@ -131,5 +131,6 @@
         </form>
     </section>
     <%- include('../partials/footer') %>
+    <script src="../../../js/validations/productValidation.js"></script>
 </body>
-<script src="../../../js/validations/modificarProductoValidacion.js"></script>
+</html>
