--- a/src/src/views/products/createProduct.ejs
+++ b/src/src/views/products/createProduct.ejs
@@ -20,7 +20,7 @@
                 </div>
                 <div class="info">
                     <label for="album">Nombre del Album: </label>
-                    <input type="text" name="album" id="album" value="<%= locals && locals.writtenValues ? writtenValues.album : '' %>" required>
+                    <input type="text" name="album" id="album" value="<%= locals && locals.writtenValues ? writtenValues.album : '' %>" >
                     <div class="error-album"></div>
                 </div>
             </div>
@@ -37,20 +37,20 @@
                 </div>
                 <div class="info">
                     <label for="year">Año de lanzamiento: </label>
-                    <input type="number" name="year" id="year" value="<%= locals && locals.writtenValues ? writtenValues.year : '' %>" required>
+                    <input type="number" name="year" id="year" value="<%= locals && locals.writtenValues ? writtenValues.year : '' %>" >
                     <div class="error-year"></div>
                 </div>
             </div>
             <div class="division">
                 <div class="info">
                     <label for="price">Precio: $</label>
-                    <input type="number" step="0.01" name="price" id="price" value="<%= locals && locals.writtenValues ? writtenValues.price : '' %>" required>
+                    <input type="number" step="0.01" name="price" id="price" value="<%= locals && locals.writtenValues ? writtenValues.price : '' %>" >
                     <div class="error-price"></div>
                 </div>
                 <div class="info">
                     <label for="description">Descripción: </label>
                     <!-- <input type="text" name="description" id="description"> -->
-                    <textarea name="description" id="description" cols="40" rows="5" required><%= locals && locals.writtenValues ? writtenValues.description : '' %></textarea>
+                    <textarea name="description" id="description" cols="40" rows="5" ><%= locals && locals.writtenValues ? writtenValues.description : '' %></textarea>
                     <div class="error-description"></div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="info three">
                     <label for="color" id="color-selector">Color predominante del album :</label>
-                    <select name="color" id="color-album" required>
+                    <select name="color" id="color-album" >
                         <% if(locals && locals.availableColors) { %>
                             <% availableColors.forEach( colour => { %>
                         <option value="<%= colour.color_id %>" <%= locals && locals.writtenValues && ( writtenValues.color == colour.color_id ) ? 'selected' : '' %> ><%= colour.name %></option>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="info three">
                     <label for="recordLabel" id="record-selector">Sello discográfico del album :</label>
-                    <select name="recordLabel" id="record-album" required>
+                    <select name="recordLabel" id="record-album" >
                         <% if(locals && locals.recordLabels) { %>
                             <% recordLabels.forEach( recordLabel => { %>
                         <option value="<%= recordLabel.recordLabel_id %>" <%= locals && locals.writtenValues && ( writtenValues.recordLabel == recordLabel.recordLabel_id ) ? 'selected' : '' %> ><%= recordLabel.name %></option>
@@ -101,7 +101,7 @@
             </div>
             <div class="info" id="info-pieces">
                 <label for="pieces">Piezas: </label>
-                <input type="number" step="0.01" name="pieces" id="pieces" value="<%= locals && locals.writtenValues ? writtenValues.pieces : '' %>" required>
+                <input type="number" step="0.01" name="pieces" id="pieces" value="<%= locals && locals.writtenValues ? writtenValues.pieces : '' %>" >
             </div>
             <div id="in-case-of-errors">
                 <% if(locals && locals.errors) { %>
