--- a/src/src/views/products/editProduct.ejs
+++ b/src/src/views/products/editProduct.ejs
@@ -25,7 +25,7 @@
                 </div>
                 <div class="info">
                     <label for="album">Nombre del Album: </label>
-                    <input type="text" name="album" id="album" value="<%= locals && locals.writtenValues ? writtenValues.album : locals && locals.product ? product.name : '' %>" required>
+                    <input type="text" name="album" id="album" value="<%= locals && locals.writtenValues ? writtenValues.album : locals && locals.product ? product.name : '' %>" >
                     <div class="error-album"></div>
                 </div>
             </div>
@@ -42,18 +42,18 @@
                 </div>
                 <div class="info">
                     <label for="year">Año de lanzamiento: </label>
-                    <input type="number" name="year" id="year"  value="<%= locals && locals.writtenValues ? writtenValues.year : locals && locals.product ? product.year : '' %>" required>
+                    <input type="number" name="year" id="year"  value="<%= locals && locals.writtenValues ? writtenValues.year : locals && locals.product ? product.year : '' %>" >
                 </div>
             </div>
             <div class="division">
                 <div class="info">
                     <label for="price">Precio: </label>
-                    <input type="number" step="0.01" name="price" id="price" value="<%= locals && locals.writtenValues ? writtenValues.price : locals && locals.product ? product.price : '' %>" required>
+                    <input type="number" step="0.01" name="price" id="price" value="<%= locals && locals.writtenValues ? writtenValues.price : locals && locals.product ? product.price : '' %>" >
                 </div>
                 <div class="info">
                     <label for="description">Descripción: </label>
                     <!-- <input type="text" name="description" id="description"> -->
-                    <textarea name="description" id="description" cols="40" rows="5" required><%= locals && locals.writtenValues ? writtenValues.description : locals && locals.product ? product.description : '' %></textarea>
+                    <textarea name="description" id="description" cols="40" rows="5" ><%= locals && locals.writtenValues ? writtenValues.description : locals && locals.product ? product.description : '' %></textarea>
                     <div class="error-description"></div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="info three">
                     <label for="recordLabel" id="record-selector">Sello discográfico del album :</label>
-                    <select name="recordLabel" id="record-album" required>
+                    <select name="recordLabel" id="record-album" >
                         <% if(locals && locals.recordLabels) { %>
                             <% recordLabels.forEach( recordLabel => { %>
                         <option value="<%= recordLabel.recordLabel_id %>" <%= locals && locals.writtenValues && ( writtenValues.recordLabel == recordLabel.recordLabel_id ) ? 'selected' : locals && locals.product && ( product.recordLabel_id_1 == recordLabel.recordLabel_id ) ? 'selected' : '' %> ><%= recordLabel.name %></option>
@@ -90,7 +90,7 @@
                     <label>Canciones :</label>
                     <div class="songs">
                         <label for="songs">Selecciona el titulo :</label>
-                        <select name="songs" id="songs-album">
+                        <select name="songs" id="songs-album" required>
                             <% if(locals && locals.songs) { %>
                                 <% songs.forEach( song => { %>
                             <option value="<%= song.song_id %>" <%= locals && locals.writtenValues && ( writtenValues.songs == song.song_id ) ? 'selected' : locals && locals.product && ( song.song_id == product.songs[0].song_id ) ? 'selected' : '' %>><%= song.name %> de <%= song.artistsSongs[0].fullName %></option>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="info" id="info-pieces">
                     <label for="pieces">Piezas: </label>
-                    <input type="number" step="0.01" name="pieces" id="pieces" value="<%= locals && locals.writtenValues ? writtenValues.pieces : locals && locals.product ? product.pieces : '' %>" required>
+                    <input type="number" step="0.01" name="pieces" id="pieces" value="<%= locals && locals.writtenValues ? writtenValues.pieces : locals && locals.product ? product.pieces : '' %>" >
                 </div>
                 <div id="in-case-of-errors">
                     <% if(locals && locals.errors) { %>
