Construyendo las API's.

--- a/src/src/views/users/profile.ejs
+++ b/src/src/views/users/profile.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/header') %>
     <section class="profile-section">
         <div id="first-container">
-            <h2 id="acc">Cuenta</h2>
+            <h2 id="acc">Mi Cuenta</h2>
             <h2 id="acc"><a id="logout" href="#">Cerrar Sesión</a></h2>
         </div>
         <div id="greeting-and-image">
