--- a/src/dashboard/src/css/Categories.css
+++ b/src/dashboard/src/css/Categories.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 94%;
-    height: 50%;
+    height: 320px;
     border: 1px black solid;
     margin: 0 auto 10px;
     border-radius: 5px;
@@ -11,6 +11,7 @@
 
 article h2#categoryTitle {
     font-size: 12px;
+    font-weight: 600;
     align-self: center;
     height: 14px;
     width: 90%;
@@ -35,8 +36,20 @@ article div#all-categories {
     }
 }
 
+@media (min-width: 768px) {
+
+    article h2#categoryTitle {
+        font-size: 14px;
+    }
+
+}
+
 @media (min-width: 1130px) {
     #categories {
         height: 100px;
+    }
+
+    article h2#categoryTitle {
+        font-size: 15px;
     }
 }
