--- a/src/dashboard/src/css/ContentWrapper.css
+++ b/src/dashboard/src/css/ContentWrapper.css
@@ -2,3 +2,16 @@
     width: 100%;
     height: 100%;
 }
+
+@media (min-width: 768px) {
+    #listsOf {
+        display: flex;
+    }
+}
+
+@media (min-width: 1130px) {
+    #lastOnes {
+        display: flex;
+        flex-direction: row;
+    }
+}
