--- a/src/dashboard/src/css/SideBar.css
+++ b/src/dashboard/src/css/SideBar.css
@@ -17,7 +17,7 @@ a {
 
 #sidebar {
     width : 30%;
-    height: 1000px;
+    height: 100%;
     border: solid 1px black;
     padding: 0;
     background-color: #f0f0f0;
