--- a/src/dashboard/src/css/TotalOf.css
+++ b/src/dashboard/src/css/TotalOf.css
@@ -10,9 +10,11 @@
 }
 
 h2#total-of {
-    width: 100%;
+    width: 70px;
     height: 40%;
     font-size: 10px;
+    font-weight: 600;
+    margin: 10px auto;
 }
 
 @media (min-width: 768px){
