--- a/src/public/css/stylesLogin.css
+++ b/src/public/css/stylesLogin.css
@@ -97,6 +97,10 @@ input {
   text-align: center;
 }
 
+.password-forgotten-and-create {
+  color: rgb(104, 0, 208)
+}
+
 
 @font-face {
   font-family: "fontello";
