--- a/src/src/views/partials/footer.ejs
+++ b/src/src/views/partials/footer.ejs
@@ -12,7 +12,7 @@
                     <h3>Colecciones</h3>
                     <ul class="unordered-list">
                         <li><a href="/productos">Explorar</a></li>
-                        <li><a href="/productos/generos">Generos</a></li>
+                        <li><a href="/productos/categorias">Categorias</a></li>
                         <li><a href="/productos/artistas">Artistas</a></li>
                     </ul>
         </div>
