--- a/src/src/views/users/login.ejs
+++ b/src/src/views/users/login.ejs
@@ -26,8 +26,8 @@
                 </article>
               <button type="submit" id="submit-button">Iniciar Sesión</button>
           </form>
-          <p>¿Olvidaste la contraseña? <a href="#" target="_blank"><br>Recuperar contraseña ></a></p>
-          <p>¿No tienes una cuenta? <a href="/usuario/registro">Crear cuenta ></a></p>
+          <p>¿Olvidaste la contraseña? <a class="password-forgotten-and-create" href="#" target="_blank"><br>Recuperar contraseña ></a></p>
+          <p>¿No tienes una cuenta? <a class="password-forgotten-and-create" href="/usuario/registro">Crear cuenta ></a></p>
       </section>
     </div>
     <%- include('../partials/footer') %>
