--- a/src/src/views/users/register.ejs
+++ b/src/src/views/users/register.ejs
@@ -79,8 +79,8 @@
                 <% } %>
             <button type="submit" id="submit-button">Registrarse</button>
         </form>
-        <p>Al crear la cuenta, acepta las <a href="#" target="_blank">Condiciones de uso</a> y el <br><a href="#" target="_blank">Aviso de Privacidad</a> de BMG Records.</p>
-        <p>¿Ya tienes una cuenta? <a href="/usuario/inicio-de-sesion">Inicia Sesión ></a></p>
+        <p>Al crear la cuenta, acepta las <a class="notice-terms-login" href="#" target="_blank">Condiciones de uso</a> y el <br><a class="notice-terms-login" href="#" target="_blank">Aviso de Privacidad</a> de BMG Records.</p>
+        <p>¿Ya tienes una cuenta? <a class="notice-terms-login" href="/usuario/inicio-de-sesion">Inicia Sesión ></a></p>
     </section>
     <%- include('../partials/footer') %>
     <script src="../../../js/validations/signupValidation.js"></script>
