--- a/src/src/views/partials/header.ejs
+++ b/src/src/views/partials/header.ejs
@@ -10,10 +10,10 @@
 </header>
 <section class="menu">
     <ul id="menu-list">
-        <li id="menu-item"><a href="/usuario/inicio-de-sesion">Iniciar Sesión</a></li>
+        <li id="menu-item"><a href="/usuario/inicio-de-sesion">Perfil</a></li>
         <li id="menu-item"><a href="/usuario/registro">Registrarse</a></li>
         <li id="menu-item"><a href="/productos">Explorar productos</a></li>
-        <li id="menu-item"><a href="/bmgrecords">¿Quiénes somos?</a></li>
+        <!-- <li id="menu-item"><a href="/bmgrecords">¿Quiénes somos?</a></li> -->
     </ul>
 </section>
 <section class="searcher">
