--- a/src/public/css/stylesCart.css
+++ b/src/public/css/stylesCart.css
@@ -100,6 +100,18 @@ h2#empty {
   color: red;
 }
 
+#delete-cart-product {
+	border: none;
+}
+
+p#album-no {
+  display: none;
+}
+
+form input.discs, form input.total, form input.albums-numbers {
+  display: none;
+}
+
 .cupon {
   text-align: center;
   width: 80%;
