--- a/dashboard/src/css/SideBar.css
+++ b/dashboard/src/css/SideBar.css
@@ -17,7 +17,7 @@ a {
 
 #sidebar {
     width : 30%;
-    height: 100%;
+    height: 1100px;
     border: solid 1px black;
     padding: 0;
     background-color: #f0f0f0;
@@ -58,6 +58,12 @@ a {
     margin: 60px 0;
 }
 
+@media (min-width: 419px){
+    #sidebar {
+        height : 955px;
+    }
+}
+
 @media (min-width: 576px) {
 
     #sidebar {
@@ -91,6 +97,26 @@ a {
 
     span {
         align-self: center;
+    }
+
+}
+
+@media (min-width: 690px){
+    #sidebar {
+        height: 900px;
+    }
+}
+
+@media (min-width: 768px){
+    #sidebar {
+        height: 850px;
+    }
+}
+
+@media (min-width: 1130px) {
+    
+    #sidebar {
+        height: 820px;
     }
 
 }
