--- a/dashboard/src/css/TotalOf.css
+++ b/dashboard/src/css/TotalOf.css
@@ -13,8 +13,12 @@ h2#total-of {
     width: 70px;
     height: 40%;
     font-size: 10px;
-    font-weight: 600;
     margin: 10px auto;
+}
+
+h2#total-of p {
+    margin: 0;
+    font-weight: 600;
 }
 
 @media (min-width: 768px){
@@ -26,6 +30,10 @@ h2#total-of {
 
     h2#total-of {
         font-size: 15px;
+    }
+
+    h2#total-of p {
+        margin: 10px auto;
     }
 
 }
