se corrigio la ruta del boton dashboard

--- a/src/src/views/main/index.ejs
+++ b/src/src/views/main/index.ejs
@@ -21,7 +21,7 @@
                 <% } %>
             </article>
         </div>
-        <button class="add-cart"><a href="http://localhost:3000/">Dashboard</a></button>
+        <button class="add-cart"><a href="https://dashboard-to-ecommercebmg.herokuapp.com/">Dashboard</a></button>
         <article class="elements">
             <% for(let i = 0; i < firstSection.elements.length; i++) { %>
                 <button class="Right-Scroll"><a href="<%= firstSection.elements[i].link %>"><%= firstSection.elements[i].elementName %></a></button>
