se agregó un icono para la pestaña

--- a/src/src/views/partials/head.ejs
+++ b/src/src/views/partials/head.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./../../../icons/icons8-album-49.ico" class="icon"/>
     <!-- Titulo de la Página Dinámico -->
     <title><%= head.title %></title>
     <!-- Tipografía -->
