--- a/src/public/css/stylesLogin.css
+++ b/src/public/css/stylesLogin.css
@@ -98,6 +98,11 @@ input {
 }
 
 
+.password-forgotten-and-create {
+  color: rgb(104, 0, 208)
+}
+
+
 @font-face {
   font-family: "fontello";
   src: url('../font/fontello.eot');
