--- a/src/src/views/users/profile.ejs
+++ b/src/src/views/users/profile.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/header') %>
     <section class="profile-section">
         <div id="first-container">
-            <h2 id="acc">Cuenta</h2>
+            <h2 id="acc">Mi Cuenta</h2>
             <h2 id="acc"><a id="logout" href="#">Cerrar Sesión</a></h2>
         </div>
         <div id="greeting-and-image">
@@ -92,6 +92,7 @@
         <% if(!locals.editing) { %>
             <br><div><h3 class="field"><a id="products" href="/productos/crear">-> Vender Vinyl.</h3></a></div>
             <br><div><h3 class="field"><a id="products" href="#">-> Mis productos registrados.</h3></a></div>
+            <br><div><h3 class="field"><a id="products" href="/carrito-de-compras/en-camino">-> Mis compras.</h3></a></div>
             <br><div><h3 class="field"><a id="edit-profile" href="/usuario/perfil/editar"><- Editar perfil</h3></a></div> 
         <% } else { %>
         <% } %>
